--- a/.env.example
+++ b/.env.example
@@ -31,3 +31,10 @@ OCTOPART_API_KEY=your_octopart_key_here
 # Server
 PORT=8000
 HOST=0.0.0.0
+
+# PostgreSQL Database
+POSTGRES_USER=ee_user
+POSTGRES_PASSWORD=your_secure_password
+POSTGRES_HOST=localhost
+POSTGRES_PORT=5432
+POSTGRES_DB=ee_research_scout
