--- a/requirements.txt
+++ b/requirements.txt
@@ -12,3 +12,10 @@ neo4j
 beautifulsoup4
 lxml
 justext
+
+# Existing dependencies...
+
+# PostgreSQL
+psycopg2-binary>=2.9.9
+sqlalchemy>=2.0.23
+alembic>=1.13.0
